--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
-    <string name="item_menu_main">Меню</string>
+    <string name="item_wifi_main">WiFi</string>
     <string name="item_menu_log">Отчет</string>
 
     <!-- wifi band start -->
