--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,13 @@
     <string name="streams_toggle">Кол-во потоков</string>
     <string name="iperfMenu">iperf</string>
     <string name="channel_short_name">CH</string>
+    <string name="name_detail_ssid">Имя сети (SSID)</string>
+    <string name="name_mac">MAC адрес</string>
+    <string name="name_central_frequency">Цент. частота</string>
+    <string name="name_frequency_range">Диапазон частот</string>
+    <string name="name_channel">Канал</string>
+    <string name="name_bandwidth">Ширина канала</string>
+    <string name="parameters_ap">Параметры AP</string>
+    <string name="type_channel">Тип канала</string>
 
 </resources>
