--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,13 @@
     <string name="wifi_band_5ghz" translatable="false">"5 GHz"</string>
     <!-- wifi band end -->
 
+    <string name="channel_rating_best">"Лучшие каналы:"</string>
+    <string name="channel_rating_best_none">"Нет"</string>
+    <string name="channel_rating_best_alternative">", попробуйте альтернативный WiFi диапазон"</string>
+    <string name="channel_rating_heading_rating">"Оценка каналов"</string>
+    <string name="channel_rating_heading_number">"Номер канала"</string>
+    <string name="channel_rating_heading_count">"Число точек доступа"</string>
+
     <string name="iperfHost">Хост</string>
     <string name="iperfPort">Порт</string>
     <string name="duration_toggles">Длительность</string>
@@ -30,5 +37,6 @@
     <string name="type_channel">Тип канала</string>
     <string name="distance">Расстояние до AP</string>
     <string name="vendor">Производитель</string>
+    <string name="best_channel">Лучший канал:</string>
 
 </resources>
