--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,5 +38,8 @@
     <string name="distance">Расстояние до AP</string>
     <string name="vendor">Производитель</string>
     <string name="best_channel">Лучший канал:</string>
+    <string name="ip">IP:</string>
+    <string name="speed">Speed:</string>
+    <string name="macdevice">MacDevice:</string>
 
 </resources>
